[package]
name = "slsk_dump"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
soulseek_protocol = { path = "../soulseek_protocol" }
bytes = "1"
serde_json = "1.0.59"
serde = "1.0.126"
serde_derive = "1.0.126"
anyhow = "1.0.40"