[package]
name = "soulseek_protocol"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

md5 = "0.7.0"
rand = "0.7.3"
tokio = { version = "^1", features = ["io-util", "net", "macros", "time", "sync", "fs" ] }
bytes = "1"
futures = "0.3.8"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.42"
tracing = "^0.1"
tracing-futures = "^0.2"
flate2 = { version = "1.0.17", features = ["zlib", "tokio"], default-features = false }
sled = "0.34.6"
config = "0.11.0"
lazy_static = "1.4.0"
socket2 = "0.4.0"
log = "0.4.14"

[dev-dependencies]
tokio-test = "0.4.1"
hex = "0.4.3"
