[package]
name = "vessel_http"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soulseek_protocol = { path = "../soulseek_protocol" }
vessel_database = { path = "../vessel_database" }
tokio = { version = "^1", features = ["io-util", "net", "macros", "sync"] }
warp = "0.3.1"
rand = "0.7.3"
serde_derive = "1.0.125"
serde = "1.0.125"
percent-encoding = "2.1.0"
log = "0.4.14"
