[package]
name = "vessel_sse"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soulseek_protocol = { path = "../soulseek_protocol" }
tokio = { version = "0.2", features = ["io-util", "net", "macros", "sync" ] }
futures ="0.3.8"
warp = "0.2.5"
serde_json = "1.0.59"
serde = "1.0.117"
bytes = "0.6.0"
log = "0.4.11"
