[package]
name = "vessel_sse"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soulseek_protocol = { path = "../soulseek_protocol" }
tokio = { version = "^1", features = ["io-util", "net", "macros", "sync", "signal"] }
tokio-stream = "0.1.8"
futures ="0.3.21"
warp = "0.3.2"
serde_json = "1.0.75"
serde = "1.0.136"
bytes = "1.1.0"
log = "0.4.16"
tracing = "^0.1"
tracing-futures = "^0.2"
